fix: fix overflow-x for transform

--- a/pageStyle/game.css
+++ b/pageStyle/game.css
@@ -10,7 +10,7 @@
     gap: 8px;
     color: var(--light-foreground);
 
-    overflow-x: clip;
+    overflow-x: visible;
 
     /*** Error Page Style ***/
     &.error {
