--- a/pageStyle/history.css
+++ b/pageStyle/history.css
@@ -42,7 +42,7 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
-        overflow-x: clip;
+        overflow-x: visible;
         position: relative;
 
         .remove-transition-box {
